content/docs/0.11.x/reference/cli/commands/keptn_delete_project.md
---
date: "2021-11-25T14:20:40Z"
title: "keptn delete project"
slug: keptn_delete_project
---
## keptn delete project

Deletes a project identified by project name

### Synopsis

Deletes a project identified by project name. 

**Notes:**
* If a Git upstream is configured for this project, the referenced upstream repository (e.g., on GitHub) will not be deleted. 
* Services that have been deployed to the Kubernetes cluster are not deleted.
* Namespaces that have been created on the Kubernetes cluster are not deleted.
* Helm-releases created for deployments are not deleted. To clean-up deployed Helm releases, please see [Clean-up after deleting a project](https://v1.keptn.sh/docs/0.11.x/continuous_delivery/deployment_helm/#clean-up-after-deleting-a-project)


```
keptn delete project PROJECTNAME [flags]
```

### Examples

```
keptn delete project sockshop
```

### Options

```
      --keep-services   Indicate whether the helm releases that are part of the project should be deleted as well, or not
```

### Options inherited from parent commands

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn delete](../keptn_delete/)	 - Deletes a project

###### Auto generated by spf13/cobra on 25-Nov-2021
